# Cairn

./: .env.example  .gitignore  DEVELOPMENT_NOTES.md  LICENSE  README.md  cairn_demo_queries.json  cairn_demo_queries_recipe.yml  inspect_mcp_shapes.py  probe_mcp.py  probe_sentinel.py  probe_writeback.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
cairn/: __init__.py  agent.py  capsule.py  cli.py  debug_mcp.py  governance.py  mcp_client.py
datahub/: structured_properties.yaml
examples/: sample_capsule.json  sample_finding.json
tests/: test_agent.py  test_governance.py  test_write_reflection.py
