[project]
name = "cairn"
version = "0.1.0"
description = "A context relay agent for DataHub — leaves structured handoff markers for the next agent or person."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Tepsu82" }]
dependencies = [
    "mcp>=1.9.0,<2.0.0",
    "python-dotenv~=1.0.1",
    "click~=8.1.7",
]

[project.optional-dependencies]
dev = ["pytest~=8.3.3", "pytest-asyncio~=0.24.0"]
# Only needed to enable Sentinel._find_documentation_gaps, which
# degrades gracefully (logs + returns no findings) if this isn't
# installed or ANTHROPIC_API_KEY isn't set -- see agent.py and
# DEVELOPMENT_NOTES.md. Not a hard dependency of the package.
llm = ["anthropic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# asyncio_mode left at the default (strict) rather than "auto": async
# tests do exist now (test_write_reflection.py, covering agent.py /
# mcp_client.py) and pass fine under strict mode using explicit
# `@pytest.mark.asyncio` markers on each test function. Switch to
# "auto" only if you'd rather not annotate every async test
# individually going forward.

[tool.setuptools]
# Explicit, not auto-discovered: without this, setuptools' flat-layout
# discovery sees both cairn/ (the package) and datahub/ (a data folder
# containing structured_properties.yaml, no __init__.py) as candidate
# top-level packages and refuses to build at all. Verified this fails
# with a clear "Multiple top-level packages discovered" error without
# this line.
packages = ["cairn"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"